# SBhacks

./: CMakeLists.txt  README.md  main.py  requirements.txt
Frontend/src/: App.jsx  index.css
